move image files

--- a/cere_test/2.lossfunction.md
+++ b/cere_test/2.lossfunction.md
@@ -17,7 +17,7 @@ problem.AddResidualBlock(cost_function, loss_function, para_q, para_t);
 
 ```
 
-![](./img/img1.png)
+![](./img/lossfunction/img1.png)
 
 ## ceres 中的 loss function 选择
 
@@ -27,7 +27,7 @@ problem.AddResidualBlock(cost_function, loss_function, para_q, para_t);
 
 ### Cauchy loss function
 
-![](./img/img2.png)
+![](./img/lossfunction/img2.png)
 
 - Cauchy 核函数是一种鲁棒的损失函数，特别适用于处理具有较大噪声的数据
 - 它通过增加一个非线性的加权因子来降低异常值的影响，**这个加权因子随着残差的增加而减少**
@@ -72,7 +72,7 @@ void CauchyLoss::Evaluate(double s, double rho[3]) const {
 
 ### Trivial loss function
 
-![](./img/img3.png)
+![](./img/lossfunction/img3.png)
 
 - Trivial 损失函数实际上是不应用任何额外处理的标准最小二乘损失函数。在这种情况下，所有的残差都会被平等对待，不论它们是正常值还是异常值
 - 使用 Trivial 损失函数的优化等同于标准的最小二乘优化，没有任何鲁棒性对策
@@ -80,7 +80,7 @@ void CauchyLoss::Evaluate(double s, double rho[3]) const {
 
 ### Huber loss function
 
-![](./img/img4.png)
+![](./img/lossfunction/img4.png)
 
 - Huber 损失函数是平方损失和绝对损失的结合。对于小的残差，它表现得像平方损失函数，对于大的残差，则表现得像绝对损失函数
 - Huber 损失对于小的误差比较敏感，这使得它在没有异常值的情况下更接近最小二乘估计
