--- a/cere_test/3.bundle_adjustment.md
+++ b/cere_test/3.bundle_adjustment.md
@@ -1,3 +1,24 @@
 
 [ref](https://blog.csdn.net/weixin_48524215/article/details/117070266)
 [bundle-adjustment](https://ceres-solver-tutorial-cn.gitbook.io/ceres/optimization-tutorial/non-linear-least-squares/bundle-adjustment)
+
+
+## bundle adjustment
+
+基于 ceres-solver `simple_bundle_adjustment.cc` 和[BAL数据集](https://grail.cs.washington.edu/projects/bal/ladybug.html/problem-49-7776-pre.txt.bz2)
+
+针孔相机模型：相机旋转R，平移t，焦距f，两个径向畸变参数k1,k2
+
+```
+P = R * X + t（从世界坐标转换为相机坐标）
+
+p = -P / P.z（归一化除法）
+
+p'= f * r（p）* p（转换为像素坐标）
+```
+
+r（p）是一个消除径向畸变的函数
+
+`r(p) = 1.0 + k1 * ||p||^2 + k2 * ||p||^4`
+
+这样就给出了以像素为单位的投影，其中图像的原点是图像的中心，x轴的正指向右，y轴的正指向上方（此外，在相机坐标系中，z轴为正轴指向后方，因此相机向下看Z轴的负方向
