--- a/cere_test/3.bundle_adjustment.md
+++ b/cere_test/3.bundle_adjustment.md
@@ -1,7 +1,15 @@
 
 ## bundle adjustment
 
-基于 ceres-solver `simple_bundle_adjustment.cc` 和[BAL数据集](https://grail.cs.washington.edu/projects/bal/ladybug.html/problem-49-7776-pre.txt.bz2)
+### introduction
+
+![](./img/bundle_adjust/ba_6.png)
+
+![](./img/bundle_adjust/ba_7.png)
+
+### bundle_adjustment introduction
+
+基于 ceres-solver `simple_bundle_adjustment.cc` 和[BAL数据集](https://grail.cs.washington.edu/projects/bal/ladybug.html/problem-49-7776-pre.txt.bz2)的说明
 
 针孔相机模型：相机旋转R，平移t，焦距f，两个径向畸变参数k1,k2
 
