--- a/cere_test/4.ceres_solver_type.md
+++ b/cere_test/4.ceres_solver_type.md
@@ -13,3 +13,5 @@
   - 共轭梯度法(Conjugate Gradient Normal Residual)。适用于具有稀疏结构的问题，但求解速度较慢
 - DENSE_NORMAL_CHOLESKY
   - 使用稠密Cholesky分解方法求解正规方程。适用于内存足够的小规模问题
+
+Ceres为这个BA提供了三个专门的求解器（统称为基于Schur的求解器）：SPARSE_SCHUR、DENSE_SCHUR、ITERATIVE_SCHUR。可以使用这种求解器快速高效求解
