--- a/cpp_test/左值右值_左右引用_移动语义和完美转发.md
+++ b/cpp_test/左值右值_左右引用_移动语义和完美转发.md
@@ -1,3 +1,13 @@
+- [左值右值 基于 C++11](#左值右值-基于-c11)
+- [左值引用和右值引用](#左值引用和右值引用)
+  - [特别的const T\&](#特别的const-t)
+  - [左值转右值引用](#左值转右值引用)
+- [移动语义和完美转发](#移动语义和完美转发)
+  - [移动语义](#移动语义)
+  - [std::move作用与源码中的引用折叠](#stdmove作用与源码中的引用折叠)
+  - [万能引用与std::forward完美转发](#万能引用与stdforward完美转发)
+  - [static\_cast\<T\&\&\>与std::forward替换讨论](#static_castt与stdforward替换讨论)
+  - [参考文章](#参考文章)
 
 # 左值右值 基于 C++11
 
@@ -87,8 +97,366 @@ const TestClassA& rkTA2 = TestClassA(1000);
 常用的拷贝构造函数T(const T&)参数是这个形式，vector容器的函数push_back(const value_type& val)参数也是，有没有注意到，这类函数同时也是接受右值的
 
 ```cpp
-
+// 函数TestClassAFunc1参数为const T&形式，可以接受右值
+void TestClassAFunc1(const TestClassA& refTA)
+{
+    std::cout << "TestClassAFunc1" << refTA.m_iSize << std::endl;
+}
+// TestClassA(1001)是右值，能够编译
+TestClassAFunc1(TestClassA(1001));
 ```
+
+## 左值转右值引用
+
+对于右值来说，不能真正取地址，引用实质就是操作地址指针，理论上无法进行左引用。对于左值来说，可以取地址，虽然无法直接进行右引用，但可以间接进行右引用
+
+```｀cpp
+//可以将左值转为右值，再进行右引用
+TestClassA kTA2(1000); // kTA2 是左值
+// 使用std::move转为右值引用
+TestClassA&& c3 = std::move(kTA2);
+// 使用static_cast转为右值引用
+TestClassA&& c4 = static_cast<TestClassA&&>(kTA2);
+// 使用C风格强转为右值引用
+TestClassA&& c5 = (TestClassA&&)kTA2;
+// 使用std::forwad<T&&>为右值引用
+TestClassA&& c6 = std::forward<TestClassA&&>(kTA2);
+```
+
+# 移动语义和完美转发
+
+移动语意对带有资源托管的对象，资源可以转移的且转移后能保证安全的，特别适合，还能降低析构复杂度，一些天生具有不可复制性对象也特别适合，比如unique_ptr。通俗理解就是一些带资源的对象需要拷贝时，想要有浅拷贝的效率，还想要深拷贝析构时安全的效果，正所谓鱼和熊掌不可兼得，那么被拷贝者资源权转给拷贝者，自己不再使用，来保证安全和高效。
+
+以TestClassA为例，讨论浅拷贝，深拷贝，移动语意的拷贝，先看一下C++11前的代码：
+
+```cpp
+// TestClassA类
+class TestClassA 
+{
+public:
+    TestClassA(int iSize):m_iSize(iSize)
+    {
+        m_pkData = new char[m_iSize];
+    }
+
+    TestClassA(const TestClassA& rTA):m_iSize(rTA.m_iSize)
+    {
+        m_pkData = new char[m_iSize];
+        memcpy(m_pkData,rTA.m_pkData,m_iSize);
+    }
+
+    ~TestClassA()
+    {
+        if(m_pkData)
+        {
+            delete []m_pkData;
+            m_pkData = nullptr;
+        }
+    }
+
+    int m_iSize;
+    char* m_pkData;
+};
+```
+
+这个例子是一个具有资源拖管的例子，何为是拖管，就是我们只记录资源Data的指针，而非记录资源全部信息到我们类对象里面。构造时我们从堆上用new申请内存供资源后面使用，析构时我们从堆上释放内存，回收掉资源，中间过程资源读写操作都通过指针m_pkData来完成。C++对象构造与析构函数的成对调用，也保证了安全性与不发生泄露。
+
+浅拷贝就是直接复制指针，深拷贝就是复制指针，并且复制指针指向的内存，然后两个对象指向不同的内存，互不影响。
+
+**浅拷贝**
+
+```cpp
+class TestClassA 
+{
+public:
+    TestClassA(int iSize):m_iSize(iSize)
+    {
+        m_pkData = new char[m_iSize];
+    }
+    ~TestClassA()
+    {
+        if(m_pkData)
+        {
+            delete []m_pkData;
+            m_pkData = nullptr;
+        }
+    }
+    int m_iSize;
+    char* m_pkData;
+};
+
+
+ TestClassA a1(999);
+ TestClassA a2(a1);
+```
+
+用a1对a2进行拷贝初始化，我们没有手动写出拷贝构造函数，编译器会帮我们自动生成，直接将数据直接复制，称为浅拷贝。将a1中的m_iSize与m_pkData直接拷贝到a2中，a2的m_pkData并没有真正new内存，两者共用一块内存地址，当最后都析构时，这块内存会被析构两次，发生crash,于是我们需要深拷贝来解决
+
+**深拷贝**
+
+```cpp
+// TestClassA类
+class TestClassA 
+{
+public:
+    TestClassA(int iSize):m_iSize(iSize)
+    {
+        m_pkData = new char[m_iSize];
+    }
+
+    TestClassA(const TestClassA& rTA):m_iSize(rTA.m_iSize)
+    {
+        m_pkData = new char[m_iSize];
+        memcpy(m_pkData,rTA.m_pkData,m_iSize);
+    }
+
+    ~TestClassA()
+    {
+        if(m_pkData)
+        {
+            delete []m_pkData;
+            m_pkData = nullptr;
+        }
+    }
+
+    int m_iSize;
+    char* m_pkData;
+};
+```
+
+执行TestClassA a2(a1);时，手写拷贝构造函数会被调用，a2会申请一块大小为a1.m_iSize新的内存，然后将
+a1.m_pdData对应内存数据一个一个拷贝过来，就是完全深入的复制了一遍。在析构时，各自释放自己的内存，不会有安全问题，所以C++11之前都是这么做的。
+
+这里假设m_iSize为100万，假设一个字节一个字节拷贝，那么就要进行100万次内存到寄存器再到内存的操作，这是很慢的，随m_iSize越大，我们付出的代价越高，假设我们a1内存不再访问，这种深拷贝是不是有点浪费？
+
+## 移动语义
+
+一个对象的资源在销毁前，我们将其转移给其它对象再用起来，这样能减少资源带来的构造开销，程序获得更高的效能
+
+在C++11前我们模拟一下这个过程，再加一个构造函数
+
+```cpp
+class TestClassA 
+{
+public:
+    ......
+    TestClassA(TestClassA& rTA,bool bMove = false):m_iSize(rTA.m_iSize)
+    {
+        if(bMove)
+        {
+            m_pkData = rTA.m_pkData;
+            rTA.m_pkData = nullptr;
+        }
+        else
+        {
+            m_pkData = new char[m_iSize];
+            memcpy(m_pkData,rTA.m_pkData,m_iSize);
+        }
+    }
+};
+
+TestClassA a2(a1,true);
+```
+
+构造时如果需要“移动”构造，我们将第二个参数bMove设为true,将资源指针从a1直接转移到a2,然后置空a1的资源指针，a2没有进行内存申请与拷贝，保持高效；当不需要移动构造，直接传为false,走原来的深拷贝流程。
+
+- 功能没有问题，为了照顾“移动”构造，第一个参数不能为const T&引用，一旦加了const就不能将传入对象rTA的m_pkData指针置空，不加const又不能接受像TestClassA a2(TestClassA(1000),true);的右值写法;
+- 同时这种写法还多了像尾巴一样的bool参数；另外不加const,a1是const对象也不能编译，这样我们还是再要写一个const T&的构造，这问题又变的糟乱了
+- 所以C++11直接统一，增加&&右值引用，简事情变简单，想要深拷贝的就T(const T&)实现;想要移动拷贝的就实现T(T&&)。两者都实现时，**一旦传入是个右值，就优先触发移动拷贝构造调用，使用移动语意，转移资源，减少拷贝**
+
+```cpp
+class TestClassA 
+{
+public:
+    ......
+    // 增加移动构造，方便使用移动语意
+    TestClassA(TestClassA&& rTA):
+        m_iSize(rTA.m_iSize),
+        m_pkData(rTA.m_pkData)
+    {
+        rTA.m_pkData =nullptr;
+    }
+};
+// 用右值TestClassA(1000)来触发a1的移动构造
+TestClassA a1(TestClassA(1000));
+```
+
+从C++11开始，如果我们没有手写移动拷贝构造函数，编译器会不会帮我们生成一个呢？只有下面4个函数同时没有手动定义时，编译器才会帮我们生成移动拷贝构造函数，原型为：T(const T& )
+
+1. 复制构造函数
+2. 复制赋值运算符
+3. 移动赋值运算符
+4. 析构函数
+
+## std::move作用与源码中的引用折叠
+
+既然移动语意有时那么好，原来是个左值，在某些情景下又想后绪触发移动语意怎么办呢？用我们前面2.3小节中左值转为右值引用方法，std::move是典型的一种，构造时就能触发移动语意的调用
+
+```cpp
+// 用std::move(a2)将左值a2转换成右引用，从而
+// 能触发a3的移动构造
+TestClassA a2(1000);
+TestClassA a3(std::move(a2));
+```
+
+我们来看看std::move实现，取自clang++里面源码
+
+```cpp
+template<typename _Tp>
+constexpr typename std::remove_reference<_Tp>::type&&
+move(_Tp&& __t) noexcept
+{ return static_cast<typename std::remove_reference<_Tp>::type&&>(__t); }
+```
+
+move是模板函数，模板参数_Tp，传入函数参数__t时，自然能推导出参数类型_Tp，不过其强转与返回值类型却是typename std::remove_reference<_Tp>::type&&为什么呢？因为C++的引用折叠机制，有下面4条规则
+
+- T& & 折叠成 T&
+- T& && 折叠成 T&
+- T&& & 折叠成 T&
+- T&& && 折叠成 T&&
+
+如果传入的__t本身就是一个左引用，强转也会添加&&右引用，最后会折叠为左引用，显然不是我们想要的，一旦用remove_reference去掉引用后，我们再加上&&，就能明确是右引用了，是不错！里面函数体也很简单，就是直接static_cast强转，可以看出并没有做什么操作，也没有高大上的写法，只上转为右引用后，可以让我们后绪触发移动语意的相关函数，比如移动构造，移动赋值构造。move主要针对本身是左值的表达式转为右引用，如果本身是右值，加上也没有什么意义，到这std::move就说清了。
+
+## 万能引用与std::forward完美转发
+
+之前说到一个右值引用，其表达式是左值，可能大家还没有建立深刻的印象,我们看下面代码：
+
+```cpp
+void TestLValueOrRValue(TestClassA& rA)
+{
+    std::cout << "left Value " << rA.m_iSize << std::endl;
+}
+void TestLValueOrRValue(TestClassA&& rA)
+{
+    std::cout << "right Value " << rA.m_iSize << std::endl;
+}
+void TestFun()
+{
+    TestLValueOrRValue(TestClassA(1111));
+    TestClassA&& ra2222 = TestClassA(2222);
+    TestLValueOrRValue(ra2222);
+}
+// 执行TestFun
+TestFun();
+```
+
+TestClassA(1111)本身是右值，会调用TestLValueOrRValue右值引用版本，所以第一处打印是right Value 1111。对于第二处，ra2222是右值TestClassA(2222)的引用，但ra2222这个表达式本身是个左值，所以会调用TestLValueOrRValue左值引用版本，打印为：left Value 2222。同理第一处时，在TestLValueOrRValue函数内部表达式rA实际也已经成了左值，如果在里面再调一次TestLValueOrRValue(rA)会打印：left Value 1111，有兴趣的可以试一下。
+
+TestFun输出结果： right Value 1111 , left Value 2222
+
+问题来了，如果函数体内还想保持右值引用，怎么办呢，老办法，std::move(rA)一下就可以了；但有时也需要保留传左值引用，如果用了move会将左引用改成右引用，想函数传进来是左引用，函数体内也保持左引用，传进来是右引用，函数体内也保持右引用，想要万金油啊，但有没有办法呢？答案是：还真有，模板函数的万能引用与完美转发来了。
+
+万能引用
+
+```cpp
+template<typename T>
+void func1(T&& param)
+{
+    ......
+};
+template<typename ...T>
+void func2( T&&... params)
+{
+    ......
+};
+```
+
+且有下面规定：
+
+1. 万能限定必须是函数模板，可以模板参数是单个，也可以是多个模板参数，形式为T&&
+2. 万能引用可以接受左值，也可以接受右值，而不像前面普通函数TestLValueOrRValue一样，必须与左右引用形式对应
+3. 万能引用的T不能被再修饰，否则转为普通右值引用，不能被cv修饰限定
+4. 如果想在模板类中的模板函数使用万能引用，不能使用模板类的参数，否则转为普通右值引用，如下代码样例:(这里没看懂　阿米诺斯)
+
+```cpp
+template<class T> 
+struct Test 
+{
+// a参数来源T，源自模板类，不是万能引用，为右值引用
+// b参数来源U，源自模板函数，是万能引用
+template<class U>
+A(T&& a, U&& b, int c);
+}
+```
+
+有了前面的万能引用，实现了接受左右引用，函数体内要有个类似std::move()再保持原来引用关系就完美了，std::forward()来了，就是因为**能完美正确的保持原来的左右引用关系并向下层次转化**，不再因右引用表达式是左值从而变掉，所以叫完美转发
+
+```cpp
+// 处理左值作为左引用或者右引用
+template<typename _Tp>
+constexpr _Tp&&
+forward(typename std::remove_reference<_Tp>::type& __t) noexcept
+{ return static_cast<_Tp&&>(__t); }
+
+// 处理右值作为右引用
+template<typename _Tp>
+constexpr _Tp&&
+forward(typename std::remove_reference<_Tp>::type&& __t) noexcept
+{
+    static_assert(!std::is_lvalue_reference<_Tp>::value, "template argument"
+        " substituting _Tp is an lvalue reference type");
+    return static_cast<_Tp&&>(__t);
+}
+```
+
+这里就是普通的左引用，右引用的重载，调用时会选择正确的版本，里面实现也简单，就是static_cast强转
+
+## static_cast<T&&>与std::forward替换讨论
+
+在模板这种万能引用作用范围内，基本上可以直接替换，但std::forward更安全，可以直接编译期检查出不合理隐式转换的代码，进行报错。因为这种情况下，涉及到对临时的右值进行左引用了，这是不安全的
+
+```cpp
+template <class _Ty>
+constexpr _Ty&& MyForward(
+    remove_reference_t<_Ty>& _Arg) noexcept {
+    return static_cast<_Ty&&>(_Arg);
+}
+
+template <class _Ty>
+constexpr _Ty&& MyForward(remove_reference_t<_Ty>&& _Arg) noexcept { 
+    //static_assert(!is_lvalue_reference_v<_Ty>, "bad forward call");
+    return static_cast<_Ty&&>(_Arg);
+}
+
+template<class T1, class T2>
+T1&& StaticCastFun(T1&& a1, T2&& a2) 
+{
+    return static_cast<T1&&>(a2);
+}
+
+template<class T1, class T2>
+T1&& ForwardCastFun(T1&& a1, T2&& a2) 
+{
+    return MyForward<T1>(a2);
+}
+
+struct TypeB{};
+
+struct TypeA
+{
+    TypeA() { cout << "Default  Create" << endl;}
+    TypeA(const TypeA& ) { cout << "From TypeA  Create" << endl; }
+    ~TypeA() { cout << "Del" << endl;}
+    TypeA(const TypeB&) { cout << "From TypeB  Create" << endl; }
+};
+void ForwardTypeTest(const TypeA a,  const TypeB b)
+{
+    cout << "StaticCastFun" << endl;
+    StaticCastFun(a, b);
+    cout << "ForwardCastFun" << endl;
+    ForwardCastFun(a, b);
+}
+
+int main()
+{
+    TypeA ta1;
+    TypeB tb1;
+    ForwardTypeTest(ta1,tb1);
+    return 0;
+}
+```
+
+我将完美转发std::forward拷贝过来，改成MyForward,因为我们对隐式的对右值进行了左引用，不安全，直接触发了static_assert(!is_lvalue_reference_v<_Ty>编译期断言，为了编译过，测试代码注掉了这一行，从这里可以看出最好还是用std::forward
 
 ## 参考文章
 
