--- a/cpp_test/左值右值_左右引用_移动语义和完美转发.md
+++ b/cpp_test/左值右值_左右引用_移动语义和完美转发.md
@@ -296,7 +296,7 @@ TestClassA a1(TestClassA(1000));
 // 用std::move(a2)将左值a2转换成右引用，从而
 // 能触发a3的移动构造
 TestClassA a2(1000);
-TestClassA a3(std::move(a2));
+TestClassA a3(std::move(a2)); // 这里要在cmake里面定义　SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-elide-constructors")
 ```
 
 我们来看看std::move实现，取自clang++里面源码
