--- a/cpp_test/智能指针.md
+++ b/cpp_test/智能指针.md
@@ -7,6 +7,7 @@
     - [智能指针的交叉引用问题](#智能指针的交叉引用问题)
     - [多线程访问共享对象问题](#多线程访问共享对象问题)
   - [自定义删除器](#自定义删除器)
+  - [参考文章](#参考文章)
 
 # RAII 资源创建即初始化
 
@@ -598,3 +599,7 @@ int main() {
 	return 0;
 }
 ```
+
+## 参考文章
+
+-[智能指针介绍](https://www.cnblogs.com/S1mpleBug/p/16759502.html)
