add loam like odom

--- a/cpp_test/note/智能指针.md
+++ b/cpp_test/note/智能指针.md
@@ -1,13 +1,13 @@
 - [RAII 资源创建即初始化](#raii-资源创建即初始化)
-  - [不带引用计数的智能指针](#不带引用计数的智能指针)
-    - [auto\_ptr](#auto_ptr)
-    - [scoped\_ptr](#scoped_ptr)
-    - [unique\_ptr](#unique_ptr)
-  - [带引用计数的智能指针](#带引用计数的智能指针)
-    - [智能指针的交叉引用问题](#智能指针的交叉引用问题)
-    - [多线程访问共享对象问题](#多线程访问共享对象问题)
-  - [自定义删除器](#自定义删除器)
-  - [参考文章](#参考文章)
+	- [不带引用计数的智能指针](#不带引用计数的智能指针)
+		- [auto\_ptr](#auto_ptr)
+		- [scoped\_ptr](#scoped_ptr)
+		- [unique\_ptr](#unique_ptr)
+	- [带引用计数的智能指针](#带引用计数的智能指针)
+		- [智能指针的交叉引用问题](#智能指针的交叉引用问题)
+		- [多线程访问共享对象问题](#多线程访问共享对象问题)
+	- [自定义删除器](#自定义删除器)
+	- [参考文章](#参考文章)
 
 # RAII 资源创建即初始化
 
@@ -440,7 +440,7 @@ int main() {
 
 多线程访问共享对象的线程安全问题，解释如下：线程A和线程B访问一个共享的对象，如果线程A正在析构这个对象的时候，线程B又要调用该共享对象的成员方法，此时可能线程A已经把对象析构完了，线程B再去访问该对象，就会发生不可预期的错误。
 
-Ｃ++开源网络库muduo将weak_ptr指向该对象,病痛股哟提权方式，使得将要被释放的对象的生命周期得到延续
+Ｃ++开源网络库muduo将weak_ptr指向该对象,并通过提权方式，使得将要被释放的对象的生命周期得到延续
 
 ```cpp
 #include <iostream>
